Table users {
    id int [pk, increment]
    name varchar(100) [not null]
    email varchar(100) [not null, unique]
    password_hash varchar(255) [not null]
    token varchar(255)
    created_at datetime [default: `CURRENT_TIMESTAMP`]
}
Table students {
    id int [pk, increment]
    name varchar(100) [not null]
    email varchar(100) [not null, unique]
    created_by int [not null, ref: > users.id]
    created_at datetime [default: `CURRENT_TIMESTAMP`]
    updated_by int [not null, ref: > users.id]
    updated_at datetime [default: `CURRENT_TIMESTAMP`]
}
Table grades {
    id int [pk, increment]
    name varchar(100) [not null]
    created_by int [not null, ref: > users.id]
    created_at datetime [default: `CURRENT_TIMESTAMP`]
    updated_by int [not null, ref: > users.id]
    updated_at datetime [default: `CURRENT_TIMESTAMP`]
}

Table home_rooms {
    id int [pk, increment]
    name varchar(100) [not null]
    created_by int [not null, ref: > users.id]
    created_at datetime [default: `CURRENT_TIMESTAMP`]
    updated_by int [not null, ref: > users.id]
    updated_at datetime [default: `CURRENT_TIMESTAMP`]
}

Table student_grades {
    id int [pk, increment]
    student_id int [not null, ref: > students.id]
    grade_id int [not null, ref: > grades.id]
    homeroom_id int [not null, ref: > home_rooms.id]
    status_id int [not null, ref: > status.id]
    created_by int [not null, ref: > users.id]
    created_at datetime [default: `CURRENT_TIMESTAMP`]
    updated_by int [not null, ref: > users.id]
    updated_at datetime [default: `CURRENT_TIMESTAMP`]
}

Table status {
    id int [pk, increment]
    name varchar(100) [not null]
    created_by int [not null, ref: > users.id]
    created_at datetime [default: `CURRENT_TIMESTAMP`]
    updated_by int [not null, ref: > users.id]
    updated_at datetime [default: `CURRENT_TIMESTAMP`]
}
